--- a/pom.xml
+++ b/pom.xml
@@ -41,5 +41,10 @@
 			<artifactId>poi-ooxml</artifactId>
 			<version>4.1.2</version>
 		</dependency>
+		<dependency>
+		    <groupId>org.hsqldb</groupId>
+		    <artifactId>hsqldb</artifactId>
+		    <version>2.5.2</version>
+		</dependency>	
 	</dependencies>
 </project>
